--- a/.sync.yml
+++ b/.sync.yml
@@ -1,8 +1,7 @@
-# This file can be used to customize the files managed by PDK.
-#
-# See https://github.com/puppetlabs/pdk-templates/blob/main/README.md
-# for more information.
-#
-# See https://github.com/puppetlabs/pdk-templates/blob/main/config_defaults.yml
-# for the default values.
---- {}
+# File not to be modified
+.sync.yml:
+  unmanaged: true
+.rubocop.yml:
+  unmanaged: true
+spec/default_facts.yml:
+  unmanaged: true
