--- a/spec/default_facts.yml
+++ b/spec/default_facts.yml
@@ -41,3 +41,4 @@ networking:
 icinga2_puppet_hostprivkey: /etc/puppetlabs/puppet/ssl/private_keys/lab.psick.io.pem
 icinga2_puppet_hostcert: /etc/puppetlabs/puppet/ssl/certs/lab.psick.io.pem
 icinga2_puppet_localcacert: /etc/puppetlabs/puppet/ssl/certs/ca.pem
+ostempdir: /var/tmp
